# mycraft

./: CMakeLists.txt  README.md
shaders/: HowToCompile.md  block.glsl  block.glsl.h  block_fragment.glsl  block_vertex.glsl  compile_shaders.bat  line.glsl  line.glsl.h  sky.glsl  sky.glsl.h  sky_fragment.glsl  text.glsl  text.glsl.h  text_fragment.glsl  text_vertex.glsl
src/: config.h  glfw_glue.h  main.c  sokol.c  util.c  util.h
textures/: font.png.h  sign.png.h  sky.png.h  texture.png.h
